--- a/abilityk/build.gradle
+++ b/abilityk/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'com.huawei.agconnect'
 }
 
 android {
@@ -11,9 +10,8 @@ android {
     defaultConfig {
         minSdk rootProject.ext.android.minSdk
         targetSdk rootProject.ext.android.targetSdk
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
 
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -22,9 +20,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    buildFeatures {
-        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -52,6 +47,5 @@ dependencies {
     api 'com.google.zxing:core:3.3.3'
 
     //scank
-    api 'com.huawei.hms:scan:2.5.0.300'
     api 'com.github.mozhimen.OpenCVKit:opencvk:1.0.1'
 }
