--- a/componentktest/build.gradle
+++ b/componentktest/build.gradle
@@ -5,10 +5,10 @@ plugins {
 }
 
 android {
-    compileSdkVersion rootProject.android.compileSdk
+    compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        applicationId rootProject.ext.android.applicationId
+        applicationId "com.mozhimen.componentktest"
         minSdk rootProject.ext.android.minSdk
         targetSdk rootProject.ext.android.targetSdk
         versionCode rootProject.ext.android.versionCode
