--- a/uicorektest/build.gradle
+++ b/uicorektest/build.gradle
@@ -4,10 +4,10 @@ plugins {
 }
 
 android {
-    compileSdkVersion rootProject.android.compileSdk
+    compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        applicationId rootProject.ext.android.applicationId
+        applicationId "com.mozhimen.uicorektest"
         minSdk rootProject.ext.android.minSdk
         targetSdk rootProject.ext.android.targetSdk
         versionCode rootProject.ext.android.versionCode
