--- a/abilityktest/build.gradle
+++ b/abilityktest/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        applicationId rootProject.ext.android.applicationId
+        applicationId "com.mozhimen.abilityktest"
         minSdk rootProject.ext.android.minSdk
         targetSdk rootProject.ext.android.targetSdk
         versionCode rootProject.ext.android.versionCode
