--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ android {
     compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        applicationId rootProject.ext.android.applicationId
-        minSdk rootProject.ext.android.minSdk
-        targetSdk rootProject.ext.android.targetSdk
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
+        applicationId rootProject.android.applicationId
+        minSdk rootProject.android.minSdk
+        targetSdk rootProject.android.targetSdk
+        versionCode rootProject.android.versionCode
+        versionName rootProject.android.versionName
     }
 
     buildTypes {
