--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    compileSdk rootProject.ext.android.compileSdk
+    compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        minSdk rootProject.ext.android.minSdk
-        targetSdk rootProject.ext.android.targetSdk
+        minSdk rootProject.android.minSdk
+        targetSdk rootProject.android.targetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
