--- a/underlayktest/build.gradle
+++ b/underlayktest/build.gradle
@@ -35,6 +35,6 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':underlayk')
-    implementation project(path: ':basick')
+    implementation project(':underlayk')
+    implementation project(':basick')
 }
