--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -36,10 +36,10 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':basick')
-    implementation project(path: ':debugk')
-    implementation project(path: ':componentk')
-    implementation project(path: ':uicorek')
+    implementation project(':basick')
+    implementation project(':debugk')
+    implementation project(':componentk')
+    implementation project(':uicorek')
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
