--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -14,6 +14,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        testOptions {
+            unitTests.returnDefaultValues = true
+        }
     }
 
     buildTypes {
