--- a/uicorek/build.gradle
+++ b/uicorek/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation project(project.path.replace(project.name, '') + ':basick')
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api "com.airbnb.android:lottie:3.6.1"
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
 }
