--- a/debugktest/build.gradle
+++ b/debugktest/build.gradle
@@ -37,4 +37,5 @@ android {
 dependencies {
     implementation project(':basick')
     implementation project(':debugk')
+    implementation project(':componentk')
 }
