--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     //api 'com.github.bumptech.glide:glide:4.12.0'//图片加载库
     //kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    api "androidx.concurrent:concurrent-futures:1.1.0"
+    api "androidx.concurrent:concurrent-futures-ktx:1.1.0"
+
     api 'com.google.firebase:firebase-crashlytics-buildtools:2.9.2'
 
     //test
