--- a/debugktest/src/main/AndroidManifest.xml
+++ b/debugktest/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.mozhimen.debugktest">
 
     <application
+        android:name=".DebugKApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
