--- a/uicorektest/build.gradle
+++ b/uicorektest/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
     implementation project(':uicorek')
     implementation project(':basick')
+    implementation project(':componentk')
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
