--- a/uicorektest/src/main/AndroidManifest.xml
+++ b/uicorektest/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.mozhimen.uicorektest">
 
     <application
+        android:name=".UicoreKApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
