--- a/uicorektest/src/main/AndroidManifest.xml
+++ b/uicorektest/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
             android:name=".layoutk.LayoutKChipGroupActivity"
             android:exported="false" />
         <activity
+            android:name=".layoutk.LayoutKSquareActivity"
+            android:exported="false" />
+        <activity
             android:name=".layoutk.LayoutKEmptyActivity"
             android:exported="false" />
         <activity
