--- a/componentk/build.gradle
+++ b/componentk/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'androidx.camera:camera-lifecycle:1.1.0-beta02'
     implementation 'androidx.camera:camera-extensions:1.1.0-beta02'
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
-    api 'androidx.camera:camera-core:1.1.0-beta02'
+    implementation 'androidx.camera:camera-core:1.1.0-beta02'
 
     //navigatek
     api 'androidx.navigation:navigation-fragment-ktx:2.4.1'
