--- a/abilityk/build.gradle
+++ b/abilityk/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     //qrcodek
     implementation 'com.google.zxing:android-core:3.3.0'
     implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.github.a-voyager:AutoInstaller:v1.1'
 
     //scank
     api 'com.github.mozhimen.OpenCVKit:opencvk:1.0.1'
