--- a/abilityk/src/main/AndroidManifest.xml
+++ b/abilityk/src/main/AndroidManifest.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mozhimen.abilityk">
+<manifest package="com.mozhimen.abilityk">
 
-    <!--transk-->
-    <!--TransKText2Speech-->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
-        </intent>
-    </queries>
 </manifest>
