--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
+        <!-- permissionk -->
+        <activity
+            android:name=".permissionk.PermissionKActivity"
+            android:exported="false" />
         <!-- stackk -->
         <activity
             android:name=".stackk.StackKActivity"
